# Moir--Entropy-Adaptive-Quantum-Thermoelectric-MEAQ-T-Coating

./: .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
data/benchmarks/: coating_preset_golden.json  expected_ranges.json  qe_sample.out  vasp_sample.out
docs/: CHARACTERIZATION_PLAN.md  COLLABORATION_MAP.md  COMPUTATIONAL_ROADMAP.md  ECONOMICS.md  FMEA.md  LITERATURE.md  MATERIAL_DATABASE.md  RISK_ASSESSMENT.md  SYNTHESIS_PROTOCOL.md  novelty_evidence_map.md  references.bib
notebooks/: 01_quickstart.ipynb  02_advanced_optimization.ipynb  03_dft_parsing.ipynb  README.md
scripts/: compare_coating_presets.py  run_coating_opt.py  run_composition_screen.py  run_dft_extract.py  run_moire_scan.py  run_plot_maps.py  run_pulse_phase_diagram.py  run_pulse_sim.py
src/meaqt/: __init__.py  coating_optimizer.py  composition.py  dft_adapters.py  moire_transport.py  plotting.py  pulse_response.py
tests/: test_scaffolds.py
