[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meaqt"
version = "0.1.0"
description = "Scaffold simulators for MEAQ-T adaptive coating research"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
dev = [
    "pytest>=8.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
]
ignore = ["E501"]  # line-too-long (handled by black)

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
